initial webhook handlers changes

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 OPENPHONE_API_KEY=your_api_key_here
+OPENPHONE_WEBHOOK_BASE_URL=https://your-public-domain
+OPENPHONE_WEBHOOK_HOST=0.0.0.0
+OPENPHONE_WEBHOOK_PORT=8080
