--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ OPENPHONE_API_KEY=your_api_key_here
 OPENPHONE_WEBHOOK_BASE_URL=https://your-public-domain
 OPENPHONE_WEBHOOK_HOST=0.0.0.0
 OPENPHONE_WEBHOOK_PORT=8080
+OPENPHONE_WEBHOOK_SIGNING_SECRET=your_base64_signing_secret
+OPENPHONE_WEBHOOK_SIGNATURE_TOLERANCE_SECONDS=300
