--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ OPENPHONE_WEBHOOK_HOST=0.0.0.0
 OPENPHONE_WEBHOOK_PORT=8080
 OPENPHONE_WEBHOOK_SIGNING_SECRET=your_base64_signing_secret
 OPENPHONE_WEBHOOK_SIGNATURE_TOLERANCE_SECONDS=300
+OPENPHONE_WEBHOOK_QUEUE_MAXSIZE=1000
+OPENPHONE_WEBHOOK_WORKER_COUNT=2
+OPENPHONE_WEBHOOK_ENQUEUE_TIMEOUT_SECONDS=1
